Jens Taprogge - Fri July 27 2004
	lots of improvements around the new iTunesDB browser. Including
	playlist support (just the normal ones so far). Depends on libitunesdb
	V0.5 (http://shamrock.dyndns.org/~ln/ipod/libitunesdb_0.5.tar.gz ).
	
Jens Taprogge - Fri July 16 2004
	added a new iTunesDB browser written from scratch. It provides
	browsing by Track, Artist or Album so far. The implementation is based
	on libitunesdb V0.4 (http://shamrock.dyndns.org/~ln/ipod/libitunesdb_0.4.tar.gz ).

leachbj - Sat October 9 2004
	added basic line-in recording support
	minor recording bug fixes

leachbj - Fri October 8 2004
	removed limit on number of songs per artist
	fixed some memory overwrites in iTunesDB parsing

ansi - Fri October 8 2004
	new OPTION_MENU support
	cleaned up BOOLEAN_MENU support display
	implemented new OPTION_MENU for audio recording sample rate

leachbj - Thu October 7 2004
	added volume control for wav playback (requires kernel support!)
	ported calendar from linav project (http://linav.sf.net)
	merged settings menu support from ansi
	merged play/pause and timer patch from Prashant

leachbj - Fri October 1 2004
	merged wav record/playback patch from Prashant

leachbj - Sat Septemper  4 2004
	merged Nimesweeper port from matthis

courtc - Sun July 11 2004
	added pong game

leachbj - Mon Jun 28 2004
	fixed crash in textview when a line contains only tabs

matz-josh - Sun July 27 2004
	fixed crash on dos/windows textfiles containing empty lines
	the handle on the scrollbar is now at least 2 Pixels high 
	  it has been sometimes invisible (hight 0) in large files
	added support for rewind and forward keys:
	  rewind scrolls up and forward scrolls down one screen.
	removed flicker, when trying to scroll beyond the last(first) line of text

leachbj - Thu June 17 2004
	Fixed up scroll wheel sensitivity
	Cleaned up some menu names
	Sliders now display heading correctly
	Added BlueCube (tetris clone) port from Matthis
	
leachbj - Sun June 06 2004